初步支持基本的上传单个文件的功能

--- a/server/bundles/com.zizibujuan.drip.server.servlet/build.properties
+++ b/server/bundles/com.zizibujuan.drip.server.servlet/build.properties
@@ -1,5 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,\
+               commons-fileupload-1.2.2.jar
 source.. = src/
