--- a/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
+++ b/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
@@ -51,6 +51,10 @@
       		alias="/answers"
       		class="com.zizibujuan.drip.server.servlet.AnswerServlet">
       </servlet>
+      <servlet 
+      		alias="/uploads"
+      		class="com.zizibujuan.drip.server.servlet.UploadServlet">
+      </servlet>
     </extension>
 
 	<extension
