在图片上传完成后，在页面上显示上传的图片

--- a/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
+++ b/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
@@ -55,6 +55,10 @@
       		alias="/uploads"
       		class="com.zizibujuan.drip.server.servlet.UploadServlet">
       </servlet>
+      <servlet 
+      		alias="/userImages"
+      		class="com.zizibujuan.drip.server.servlet.ImageServlet">
+      </servlet>
     </extension>
 
 	<extension
