加入“人人”网接入组件，并创建空的用户关联类。

--- a/server/bundles/com.zizibujuan.drip.server.servlet/build.properties
+++ b/server/bundles/com.zizibujuan.drip.server.servlet/build.properties
@@ -2,5 +2,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               commons-fileupload-1.2.2.jar
+               commons-fileupload-1.2.2.jar,\
+               Renren-api-java-sdk.jar,\
+               json-simple-1.1.1.jar
 source.. = src/
