--- a/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
+++ b/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
@@ -110,17 +110,18 @@
       </filter>
       
       <!-- 在进行rest转换后触发-->
+      <!-- TODO：判断哪些资源可以看作有效的资源 -->
+      <!-- 用户无需登录，就可以访问的页面，用逗号隔开。注意开头的/不能删除 -->
+      <!-- 测试时，不开启
       <filter
             alias="/"
             class="com.zizibujuan.drip.server.configurator.servlet.SessionFilter">
-            <!-- 用户无需登录，就可以访问的页面，用逗号隔开。注意开头的/不能删除 -->
             <init-param
                name="excludes"
-               value="/,/index.html,/signup.html,/drip/exercises/list.html,/closeRenrenInviteWindow.html,/dashboard.html">
-               <!-- TODO:删掉/dashboard.html-->
+               value="/,/index.html,/signup.html,/drip/exercises/list.html,/closeRenrenInviteWindow.html">
          	</init-param>
-         	<!-- TODO：判断哪些资源可以看作有效的资源 -->
       </filter>
+      -->
       
       
       <filter
