增加匿名访问的页面
为了测试方便，将dripx/login_form.html加到白名单中。
正式上线后，要在白名单中删除该页面链接

--- a/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
+++ b/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
@@ -117,7 +117,7 @@
             class="com.zizibujuan.drip.server.configurator.servlet.SessionFilter">
             <init-param
                name="excludes"
-               value="/,/index.html,/signup.html,/drip/exercises/list.html,/closeRenrenInviteWindow.html">
+               value="/,/index.html,/signup.html,/drip/exercises/list.html,/closeRenrenInviteWindow.html,/dripx/login_form.html">
          	</init-param>
       </filter>
       
