--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			<url>http://download.eclipse.org/releases/juno</url>
 		</repository>
 	</repositories>
-
+	<dependencies>
+	    <dependency>
+	      <groupId>com.google.code.gson</groupId>
+	      <artifactId>gson</artifactId>
+	      <version>2.2.2</version>
+	    </dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
