--- a/server/bundles/com.zizibujuan.drip.server.util/pom.xml
+++ b/server/bundles/com.zizibujuan.drip.server.util/pom.xml
@@ -16,4 +16,11 @@
 	</parent>
 
 	
+	<dependencies>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+	</dependencies>
 </project>
