--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<!-- repository -->		
 		<module>server/build/com.zizibujuan.drip.repository</module>
 	</modules>
+
+	<dependencies>
+	    <dependency>
+	      <groupId>com.google.code.gson</groupId>
+	      <artifactId>gson</artifactId>
+	      <version>2.2.2</version>
+	    </dependency>
+	</dependencies>
 	
 	<repositories>
 		<repository>
@@ -56,6 +64,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
 				<version>${tycho-version}</version>
+				<configuration>
+				  <pomDependencies>consider</pomDependencies>
+				</configuration>
 <!--
 				<configuration>
 					<target>
