增加单元测试依赖的jar包

--- a/server/tests/com.zizibujuan.drip.server.tests/build.properties
+++ b/server/tests/com.zizibujuan.drip.server.tests/build.properties
@@ -1,4 +1,7 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               lib/httpunit.jar,\
+               lib/nekohtml-0.9.5.jar,\
+               lib/xercesImpl-2.6.1.jar
