跑通了一个空的plugin test

--- a/server/tests/com.zizibujuan.drip.server.tests/build.properties
+++ b/server/tests/com.zizibujuan.drip.server.tests/build.properties
@@ -1,7 +1,8 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/httpunit.jar,\
                lib/nekohtml-0.9.5.jar,\
-               lib/xercesImpl-2.6.1.jar
+               lib/xercesImpl-2.6.1.jar,\
+               OSGI-INFO/serviceHolder.xml
+source.. = src/
