--- a/server/bundles/com.zizibujuan.drip.server.util/.classpath
+++ b/server/bundles/com.zizibujuan.drip.server.util/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/struts2-json-plugin-2.3.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/xwork-core-2.3.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-validator-1.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.4.jar"/>
