--- a/server/bundles/com.zizibujuan.drip.server.util/build.properties
+++ b/server/bundles/com.zizibujuan.drip.server.util/build.properties
@@ -5,4 +5,6 @@ bin.includes = META-INF/,\
                lib/commons-lang3-3.1.jar,\
                lib/commons-io-2.4.jar,\
                lib/commons-validator-1.4.0.jar,\
-               lib/commons-codec-1.7.jar
+               lib/commons-codec-1.7.jar,\
+               lib/struts2-json-plugin-2.3.8.jar,\
+               lib/xwork-core-2.3.8.jar
