--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	      <groupId>com.google.code.gson</groupId>
 	      <artifactId>gson</artifactId>
 	      <version>2.2.2</version>
-	    </dependency>		
+	    </dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.1.3</version>
+		</dependency>		
 	</dependencies>
 	
 	<repositories>
