将客户端的dojo和editor注册在各自项目的plugin.xml中。
这样做的好处是，在开发时可以使用开发版本的代码，在发布时使用经过压缩的代码。

--- a/client/bundles/com.zizibujuan.drip.client.dojo/build.properties
+++ b/client/bundles/com.zizibujuan.drip.client.dojo/build.properties
@@ -1,4 +1,5 @@
 bin.includes = META-INF/,\
                static/dijit/,\
                static/dojo/,\
-               static/dojox/
+               static/dojox/,\
+               plugin.xml
