初始化com.zizibujuan.drip.client.release项目
该项目用来放置使用dojo build工具压缩过的javascript和css文件

--- a/client/bundles/com.zizibujuan.drip.client.dojo/build.properties
+++ b/client/bundles/com.zizibujuan.drip.client.dojo/build.properties
@@ -1,5 +1,5 @@
 bin.includes = META-INF/,\
                static/dijit/,\
-               static/dojo/,\
                static/dojox/,\
-               plugin.xml
+               plugin.xml,\
+               static/dojo/
