生成两个版本的注册静态内容的方式，一个是发布版本的，一个是开发版本的。

--- a/client/bundles/com.zizibujuan.drip.client.core/plugin.xml
+++ b/client/bundles/com.zizibujuan.drip.client.core/plugin.xml
@@ -4,19 +4,18 @@
 <extension
          point="org.eclipse.equinox.http.registry.httpcontexts">
          <httpcontext
-            id="com.zizibujuan.drip.client.httpcontext.mathjax">
+            id="com.zizibujuan.drip.client.httpcontext.core">
 	         <resource-mapping
-	               bundle="com.zizibujuan.drip.client.mathjax"
-	               path="/static/mathjax">
+	               bundle="com.zizibujuan.drip.client.core"
+	               path="/web/drip">
 	         </resource-mapping>
          </httpcontext>
     </extension>
 	<extension
          point="org.eclipse.equinox.http.registry.resources">
       <resource
-            alias="/mathjax"
-            httpcontextId="com.zizibujuan.drip.client.httpcontext.mathjax">
+            alias="/drip"
+            httpcontextId="com.zizibujuan.drip.client.httpcontext.core">
       </resource>
      </extension>
 </plugin>
-
