--- a/client/bundles/com.zizibujuan.drip.client.release/build.properties
+++ b/client/bundles/com.zizibujuan.drip.client.release/build.properties
@@ -1,3 +1,4 @@
 bin.includes = META-INF/,\
-               release/
+               release/,\
+               plugin.xml
 bin.excludes = release/build-report.txt
