--- a/client/bundles/com.zizibujuan.drip.client.core/plugin.xml
+++ b/client/bundles/com.zizibujuan.drip.client.core/plugin.xml
@@ -9,13 +9,25 @@
 	               bundle="com.zizibujuan.drip.client.core"
 	               path="/web/drip">
 	         </resource-mapping>
+	         
+         </httpcontext>
+         <httpcontext
+            id="com.zizibujuan.drip.client.httpcontext.dripx">
+	         <resource-mapping
+	               bundle="com.zizibujuan.drip.client.core"
+	               path="/web/dripx">
+	         </resource-mapping>
          </httpcontext>
     </extension>
 	<extension
          point="org.eclipse.equinox.http.registry.resources">
       <resource
-            alias="/drip"
+            alias="/"
             httpcontextId="com.zizibujuan.drip.client.httpcontext.core">
+      </resource>
+      <resource
+            alias="/dripx"
+            httpcontextId="com.zizibujuan.drip.client.httpcontext.dripx">
       </resource>
      </extension>
 </plugin>
