--- a/client/bundles/com.zizibujuan.drip.client.core/plugin.xml
+++ b/client/bundles/com.zizibujuan.drip.client.core/plugin.xml
@@ -7,9 +7,16 @@
             id="com.zizibujuan.drip.client.httpcontext.core">
 	         <resource-mapping
 	               bundle="com.zizibujuan.drip.client.core"
-	               path="/web/drip">
+	               path="/web">
 	         </resource-mapping>
-	         
+	         <resource-mapping
+	               bundle="com.zizibujuan.drip.client.mathjax"
+	               path="/static">
+	         </resource-mapping>
+	         <resource-mapping
+	               bundle="com.zizibujuan.drip.client.mathjax"
+	               path="/static">
+	         </resource-mapping>
          </httpcontext>
          <httpcontext
             id="com.zizibujuan.drip.client.httpcontext.dripx">
