优化servlet中存放jar包的目录结构

--- a/server/bundles/com.zizibujuan.drip.server.servlet/build.properties
+++ b/server/bundles/com.zizibujuan.drip.server.servlet/build.properties
@@ -2,7 +2,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               commons-fileupload-1.2.2.jar,\
-               Renren-api-java-sdk.jar,\
-               json-simple-1.1.1.jar
+               lib/commons-fileupload-1.2.2.jar,\
+               lib/renren/json-simple-1.1.1.jar,\
+               lib/renren/Renren-api-java-sdk.jar
 source.. = src/
+bin.excludes = lib/renren/
