重新配置使用的jar包路径，期望解决找不到类的bug

--- a/server/bundles/com.zizibujuan.drip.server.servlet/build.properties
+++ b/server/bundles/com.zizibujuan.drip.server.servlet/build.properties
@@ -2,8 +2,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               lib/commons-fileupload-1.2.2.jar,\
-               lib/renren/json-simple-1.1.1.jar,\
-               lib/renren/Renren-api-java-sdk.jar
+               lib/
 source.. = src/
-bin.excludes = lib/renren/
