--- a/server/bundles/com.zizibujuan.drip.server.servlet/.classpath
+++ b/server/bundles/com.zizibujuan.drip.server.servlet/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/qq/Sdk4J.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/renren/Renren-api-java-sdk.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/renren/json-simple-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-fileupload-1.2.2.jar"/>
