--- a/server/bundles/com.zizibujuan.server.oauth2.sinaWeibo/src/config.properties
+++ b/server/bundles/com.zizibujuan.server.oauth2.sinaWeibo/src/config.properties
@@ -1,6 +1,6 @@
-client_ID =     
-client_SERCRET =
-redirect_URI =
+client_ID = 1418861879     
+client_SERCRET = 35e773dc408d11de76de61d99ca10725
+redirect_URI = http://zizibujuan.com/sinaWeibo
 baseURL=https://api.weibo.com/2/
 accessTokenURL=https://api.weibo.com/oauth2/access_token
 authorizeURL=https://api.weibo.com/oauth2/authorize
