--- a/client/bundles/com.zizibujuan.drip.client.dojo/plugin.xml
+++ b/client/bundles/com.zizibujuan.drip.client.dojo/plugin.xml
@@ -24,6 +24,13 @@
 	               path="/static/dojox">
 	         </resource-mapping>
          </httpcontext>
+         <httpcontext
+            id="com.zizibujuan.drip.client.httpcontext.util">
+	         <resource-mapping
+	               bundle="com.zizibujuan.drip.client.dojo"
+	               path="/static/util">
+	         </resource-mapping>
+         </httpcontext>
     </extension>
 	<extension
          point="org.eclipse.equinox.http.registry.resources">
@@ -38,6 +45,10 @@
       <resource
             alias="/dojox"
             httpcontextId="com.zizibujuan.drip.client.httpcontext.dojox">
+      </resource>
+      <resource
+            alias="/util"
+            httpcontextId="com.zizibujuan.drip.client.httpcontext.util">
       </resource>
      </extension>
 </plugin>
