--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<module>server/bundles/com.zizibujuan.drip.server.util</module>
 		<module>server/bundles/com.zizibujuan.drip.server.exception</module>
 		<module>server/bundles/com.zizibujuan.server.oauth2.sinaWeibo</module>
+		<!-- doc -->
+		<module>server/doc/com.zizibujuan.drip.doc</module>
 
 		<!-- log -->
 		<module>server/bundles/com.zizibujuan.drip.server.logback.config</module>
