--- a/server/bundles/com.zizibujuan.drip.server.util/build.properties
+++ b/server/bundles/com.zizibujuan.drip.server.util/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/
+               lib/,\
+               lib/UserAgentUtils-1.8.jar
