重命名项目drip.server.doc --> drip.server.doc.servlet

--- a/server/bundles/com.zizibujuan.drip.server.doc.servlet/.project
+++ b/server/bundles/com.zizibujuan.drip.server.doc.servlet/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.zizibujuan.drip.server.doc</name>
+	<name>com.zizibujuan.drip.server.doc.servlet</name>
 	<comment></comment>
 	<projects>
 	</projects>
