--- a/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
+++ b/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
@@ -80,6 +80,11 @@
       		class="com.zizibujuan.drip.server.servlet.ImageServlet">
       </servlet>
       
+      <!-- 项目 -->
+      <servlet 
+      		alias="/projects"
+      		class="com.zizibujuan.drip.server.doc.servlet.ProjectServlet">
+      </servlet>
       <!-- 文档 -->
       <servlet 
       		alias="/files"
