--- a/server/bundles/com.zizibujuan.drip.server.doc.service.impl/build.properties
+++ b/server/bundles/com.zizibujuan.drip.server.doc.service.impl/build.properties
@@ -1,5 +1,5 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/projectService.xml
+               OSGI-INF/
 source.. = src/
