--- a/server/bundles/com.zizibujuan.drip.server.doc.dao.mysql/build.properties
+++ b/server/bundles/com.zizibujuan.drip.server.doc.dao.mysql/build.properties
@@ -1,4 +1,5 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               OSGI-INF/projectDao.xml
+source.. = src/
