--- a/server/bundles/com.zizibujuan.drip.server.doc.servlet/plugin.xml
+++ b/server/bundles/com.zizibujuan.drip.server.doc.servlet/plugin.xml
@@ -15,6 +15,11 @@
       		alias="/files"
       		class="com.zizibujuan.drip.server.doc.servlet.FileServlet">
       </servlet>
+      <!-- 查看文件内容 -->
+      <servlet 
+      		alias="/blob"
+      		class="com.zizibujuan.drip.server.doc.servlet.BlobServlet">
+      </servlet>
       
     </extension>
 </plugin>
