--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			<layout>p2</layout>
 			<url>http://download.eclipse.org/releases/kepler</url>
 		</repository>
+
+		<repository>
+			<id>jetty</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/jetty/updates/jetty-bundles-8.x/8.1.10.v20130312</url>
+		</repository>
+
 	</repositories>
 	
 	<build>
