--- a/server/bundles/com.zizibujuan.drip.server.servlet/build.properties
+++ b/server/bundles/com.zizibujuan.drip.server.servlet/build.properties
@@ -2,5 +2,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               lib/
+               lib/,\
+               lib/renren/commons-logging-1.1.1.jar,\
+               lib/renren/renren-api2-sdk-1.0-SNAPSHOT.jar
 source.. = src/
