--- a/server/tests/com.zizibujuan.drip.server.servlet.mock/plugin.xml
+++ b/server/tests/com.zizibujuan.drip.server.servlet.mock/plugin.xml
@@ -2,4 +2,12 @@
 <?eclipse version="3.4"?>
 <plugin>
 
+    <extension
+         point="org.eclipse.equinox.http.registry.servlets">
+      <servlet
+            alias="/users"
+            class="com.zizibujuan.drip.server.servlet.mock.auth.UserServlet">
+      </servlet>
+    </extension>
+    
 </plugin>
