因为fragment项目只能扩展而不能修改plugin项目中的内容，所以将 dbaccess.mysql项目中的jdbc.properties文件移走，并新建一个 生产环境专用的fragment项目。

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<module>server/bundles/com.zizibujuan.drip.server.doc.model</module>
 		<!-- log -->
 		<module>server/bundles/com.zizibujuan.drip.server.logback.config</module>
+		<module>server/bundles/com.zizibujuan.dbaccess.mysql.config</module>
 		<!-- cache -->
 		<module>server/bundles/com.zizibujuan.cache.ehcache</module>
 		<!-- repository -->		
