添加发送邮件服务

--- a/server/bundles/com.zizibujuan.drip.server.service.impl/build.properties
+++ b/server/bundles/com.zizibujuan.drip.server.service.impl/build.properties
@@ -1,5 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,\
+               active_user_template.html
 source.. = src/
