完成用户通过邮箱链接激活功能

--- a/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
+++ b/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
@@ -40,6 +40,10 @@
             class="com.zizibujuan.drip.server.servlet.LogoutServlet">
       </servlet>
       <servlet
+            alias="/confirm"
+            class="com.zizibujuan.drip.server.servlet.EmailConfirmServlet">
+      </servlet>
+      <servlet
             alias="/signup_check"
             class="com.zizibujuan.drip.server.servlet.SignUpCheckServlet">
       </servlet>
