--- a/server/bundles/com.zizibujuan.dbaccess.mysql.config/pom.xml
+++ b/server/bundles/com.zizibujuan.dbaccess.mysql.config/pom.xml
@@ -15,5 +15,16 @@
 		<relativePath>../../../pom.xml</relativePath>
 	</parent>
 
+	<build>
+		<resources>
+			<resource>
+				<directory></directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>jdbc.properties</include>
+				</includes>
+			</resource>
+		</resources>
+	</build>
 	
 </project>
