因为tycho对没有配置source=src和out=bin的项目对maven的fitering 不起作用，所以将这个项目转换为java项目，并配置build属性，本地测试maven的 profile已生效

--- a/server/bundles/com.zizibujuan.dbaccess.mysql.config/pom.xml
+++ b/server/bundles/com.zizibujuan.dbaccess.mysql.config/pom.xml
@@ -18,7 +18,7 @@
 	<build>
 		<resources>
 			<resource>
-				<directory></directory>
+				<directory>${project.basedir}</directory>
 				<filtering>true</filtering>
 				<includes>
 					<include>jdbc.properties</include>
