编写调试邮件服务器功能，用户在生产服务器上测试发邮件功能。

--- a/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
+++ b/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
@@ -84,6 +84,12 @@
       		class="com.zizibujuan.drip.server.servlet.ImageServlet">
       </servlet>
       
+      
+      <!-- admin -->
+      <servlet 
+      		alias="/mailServer"
+      		class="com.zizibujuan.drip.server.servlet.admin.MailServerServlet">
+      </servlet>
     </extension>
 <!--
 	<extension
