添加显示所有项目页面，匿名用户通过这个页面，可以进入想要访问的项目中。

--- a/server/bundles/com.zizibujuan.drip.server.doc.servlet/plugin.xml
+++ b/server/bundles/com.zizibujuan.drip.server.doc.servlet/plugin.xml
@@ -5,11 +5,12 @@
     <extension
          point="org.eclipse.equinox.http.registry.servlets">
       
-      <!-- 项目 -->
+      <!-- 访问用户项目 -->
       <servlet 
       		alias="/projects"
       		class="com.zizibujuan.drip.server.doc.servlet.ProjectServlet">
       </servlet>
+      
       <!-- 文档 -->
       <servlet 
       		alias="/files"
