--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/package.json
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/package.json
@@ -2,10 +2,10 @@
 	"name": "drip",
 	"version": "0.0.1",
 	"dependencies":{
-		"dojo": "1.9.0",
-		"dijit": "1.9.0",
-		"dojox": "1.9.0",
-		"util": "1.9.0",
+		"dojo": "1.10.0-pre",
+		"dijit": "1.10.0-pre",
+		"dojox": "1.10.0-pre",
+		"util": "1.10.0-pre",
 		"mathEditor": "0.0.1"
 	},
 	"description": "drip core",
