--- a/server/tests/com.zizibujuan.drip.server.tests/build.properties
+++ b/server/tests/com.zizibujuan.drip.server.tests/build.properties
@@ -4,5 +4,6 @@ bin.includes = META-INF/,\
                lib/httpunit.jar,\
                lib/nekohtml-0.9.5.jar,\
                lib/xercesImpl-2.6.1.jar,\
-               OSGI-INFO/serviceHolder.xml
+               OSGI-INFO/serviceHolder.xml,\
+               OSGI-INFO/daoHolder.xml
 source.. = src/
