添加设置帐号页面

--- a/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
+++ b/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
@@ -83,7 +83,10 @@
       		alias="/userImages"
       		class="com.zizibujuan.drip.server.servlet.ImageServlet">
       </servlet>
-      
+      <servlet 
+      		alias="/settings"
+      		class="com.zizibujuan.drip.server.servlet.UserSettingServlet">
+      </servlet>      
       
       <!-- admin -->
       <servlet 
