--- a/client/bundles/com.zizibujuan.drip.client.mathjax/plugin.xml
+++ b/client/bundles/com.zizibujuan.drip.client.mathjax/plugin.xml
@@ -7,14 +7,14 @@
             id="com.zizibujuan.drip.client.httpcontext.mathjax">
 	         <resource-mapping
 	               bundle="com.zizibujuan.drip.client.mathjax"
-	               path="/static/mathJax">
+	               path="/static">
 	         </resource-mapping>
          </httpcontext>
          <httpcontext
             id="com.zizibujuan.drip.client.httpcontext.mathjax.fonts">
 	         <resource-mapping
 	               bundle="com.zizibujuan.drip.client.mathjax"
-	               path="/static/fonts">
+	               path="/static">
 	         </resource-mapping>
          </httpcontext>
          <httpcontext
