支持在个人首页发布习题

--- a/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
+++ b/server/bundles/com.zizibujuan.drip.server.configurator/plugin.xml
@@ -28,6 +28,10 @@
             class="com.zizibujuan.drip.server.servlet.ExerciseServlet">
       </servlet>
       <servlet
+            alias="/publishExercise"
+            class="com.zizibujuan.drip.server.servlet.ExercisePublishServlet">
+      </servlet>
+      <servlet
             alias="/users"
             class="com.zizibujuan.drip.server.servlet.UserServlet">
       </servlet>
