--- a/client/bundles/com.zizibujuan.drip.client.ui/plugin.xml
+++ b/client/bundles/com.zizibujuan.drip.client.ui/plugin.xml
@@ -4,16 +4,16 @@
 <extension
          point="org.eclipse.equinox.http.registry.httpcontexts">
          <httpcontext
-            id="com.zizibujuan.drip.client.httpcontext.core">
+            id="com.zizibujuan.drip.client.httpcontext.ui">
 	         <resource-mapping
-	               bundle="com.zizibujuan.drip.client.core"
+	               bundle="com.zizibujuan.drip.client.ui"
 	               path="/web">
 	         </resource-mapping>
          </httpcontext>
          <httpcontext
             id="com.zizibujuan.drip.client.httpcontext.dripx">
 	         <resource-mapping
-	               bundle="com.zizibujuan.drip.client.core"
+	               bundle="com.zizibujuan.drip.client.ui"
 	               path="/web/dripx">
 	         </resource-mapping>
          </httpcontext>
@@ -22,7 +22,7 @@
          point="org.eclipse.equinox.http.registry.resources">
       <resource
             alias="/"
-            httpcontextId="com.zizibujuan.drip.client.httpcontext.core">
+            httpcontextId="com.zizibujuan.drip.client.httpcontext.ui">
       </resource>
       <resource
             alias="/dripx"
